# snapshot-stack

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test_voter.py  voters.js
docs/: ref_single_proposal.json  reference.md  results.txt
snapshot/: crypto_token.py  main.py  proposal.py  voter.py
snapshot/data/: proposal.json  voters.py  votes.json  wallet_balances.py
src/: main.py  proposal.py  voter.py
src/data/: proposal.json  tokenholders.csv  votes.json
src/utils/: files.py
tests/: test_snapshot.py  test_voter.py
tests/test_data/: test_proposal.json  test_votes.json  test_wallet_balances.py
tokens/: utils.js  wallets.js
