[metadata]
name = snapshot-stack
version = 0.0.1
author = Eric Norman
author_email = eric@norman.zone
description = Simulate voting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enxyz/snapshot-stack
project_urls =
    Bug Tracker = https://github.com/enxyz/snapshot-stack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
		Operating System :: MacOS :: MacOS X

[options]
zip_safe = False
packages = find_namespace:
package_dir = 
	= src
include_package_data = True
python_requires = >=3.8
install_requires = 
	# https://learn.adafruit.com/improve-your-code-with-pylint/black
	# '#fmt: off', '#fmt: on'
	# https://google.github.io/styleguide/pyguide.html#21-lint
	# https://code.visualstudio.com/docs/python/linting#_specific-linters
	pylint
	pytest
	# type inference; no VS code plugin
	# https://github.com/google/pytype by https://news.ycombinator.com/item?id=19476605
	pytype 
	setuptools
	black==22.3.0
	mypy-extensions==0.4.3
	numpy==1.22.3
	pandas==1.4.2
	pathspec==0.9.0
	platformdirs==2.5.2
	pydantic==1.9.0
	python-dateutil==2.8.2
	pytz==2022.1
	six==1.16.0
	tomli==2.0.1
	typing_extensions==4.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	cli = commands.cli:cli
